test/patterns/s0001_two_sum/hafis/starchat/jml_syntax_checking.txt
./test/s0001_two_sum/hafis/starchat/Solution.java:17: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < numbers.length; ((numbers <= 1000000000) && (numbers >= -1000000000)));
                                                               ^
  first type:  int[]
  second type: int
./test/s0001_two_sum/hafis/starchat/Solution.java:17: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < numbers.length; ((numbers <= 1000000000) && (numbers >= -1000000000)));
                                                                                          ^
  first type:  int[]
  second type: int
./test/s0001_two_sum/hafis/starchat/Solution.java:19: error: bad operand types for binary operator '<='
//@ ensures(\forall int i; 0 <= i < \result.length; ((\result <= numbers.length) && (\result >= 0)));
                                                              ^
  first type:  int[]
  second type: int
./test/s0001_two_sum/hafis/starchat/Solution.java:19: error: bad operand types for binary operator '>='
//@ ensures(\forall int i; 0 <= i < \result.length; ((\result <= numbers.length) && (\result >= 0)));
                                                                                             ^
  first type:  int[]
  second type: int
4 errors
